# MLOps_HT2

./: LICENSE  README.md
mlops_project/: pyproject.toml
mlops_project/mlops_project/: main.py
